Updating _pages/about.html

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,12 +1,16 @@
 ---
 layout: generic
 title_localized:
- en: About
- es: Sobre
+  en: About US
+  es: Sobre
 meta_description_localized:
   en: 
 permalink_localized:
-  en: /about/
+  en: "/about/"
 meta_tags:
-  robots:
+  robots: 
+published_localized:
+  en: true
+  es: true
+
 ---
